[package]
name = "lotus"
version = "0.1.0"
authors = ["0xE8551CCB <noti@ifaceless.space>"]
edition = "2018"
description = "A handful cli to convert html table to markdown table."
license = "MIT"
keywords = ["markdown", "html", "table"]
readme = "README.md"
categories = ["Development"]
repository = "https://github.com/ifaceless/lotus"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.11.0"
structopt = "0.3.14"
anyhow = "1.0.28"
